[FLS-189] re-fix margins between logo and overlaping elements

--- a/lms/static/sass/blocks/_login-register.scss
+++ b/lms/static/sass/blocks/_login-register.scss
@@ -1,6 +1,5 @@
 .login-register-content {
 	background: none;
-	margin-top: 48px;
 
 	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 		display: block;
