--- a/lms/static/sass/blocks/_profile-account.scss
+++ b/lms/static/sass/blocks/_profile-account.scss
@@ -1,8 +1,8 @@
 // profile page
 
 .view-profile {
-	.wrapper-msg {
-		padding-top: 42px;
+	@media screen and (min-width: $build-header-menu-tablet) {
+
 	}
 }
 
